# Flamma-FF20

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  create_macos_app.sh  install.sh  install_patch_notes.txt  pyproject.toml  uninstall.sh  update.sh
Resources/: FF20.icns
docs/: protocol.md
ff20/: __init__.py  audio.py  cli.py  constants.py  exceptions.py  pedal.py  protocol.py  system.py  transport.py
ff20/gui/: app.py  app.py.old
tests/: test_cli_slots.py  test_protocol.py
